--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <div class="info">
         <img src="./images/image-daniel.jpg" alt="Daniel Clifford" class="avatar">
         <div class="user-details">
-          <h3>Daniel Clifford</h3>
-          <p>Verified Graduate</p>
+          <h3 class="user-name">Daniel Clifford</h3>
+          <p class="user-title">Verified Graduate</p>
         </div>
       </div>
       <p class="title">
@@ -41,8 +41,8 @@
       <div class="info">
         <img src="./images/image-jonathan.jpg" alt="Jonathan Walters" class="avatar">
         <div class="user-details">
-          <h3>Jonathan Walters</h3>
-          <p>Verified Graduate</p>
+          <h3 class="user-name">Jonathan Walters</h3>
+          <p class="user-title">Verified Graduate</p>
         </div>
       </div>
       <p class="title">
@@ -57,8 +57,8 @@
       <div class="info">
         <img src="./images/image-jeanette.jpg" alt="Jeanette Harmon" class="avatar">
         <div class="user-details">
-          <h3>Jeanette Harmon</h3>
-          <p>Verified Graduate</p>
+          <h3 class="user-name">Jeanette Harmon</h3>
+          <p class="user-title">Verified Graduate</p>
         </div>
       </div>
       <p class="title">
@@ -73,8 +73,8 @@
       <div class="info">
         <img src="./images/image-patrick.jpg" alt="Patrick Abrams" class="avatar">
         <div class="user-details">
-          <h3>Patrick Abrams</h3>
-          <p>Verified Graduate</p>
+          <h3 class="user-name">Patrick Abrams</h3>
+          <p class="user-title">Verified Graduate</p>
         </div>
       </div>
       <p class="title">
@@ -91,8 +91,8 @@
       <div class="info">
         <img src="./images/image-kira.jpg" alt="Kira Whittle" class="avatar">
         <div class="user-details">
-          <h3>Kira Whittle</h3>
-          <p>Verified Graduate</p>
+          <h3 class="user-name">Kira Whittle</h3>
+          <p class="user-title">Verified Graduate</p>
         </div>
       </div>
       <p class="title">
