--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
   <div class="testimonials">
     <div class="card">
+      <img src="./images/bg-pattern-quotation.svg" alt="" class="quotation-background">
       <div class="info">
         <img src="./images/image-daniel.jpg" alt="Daniel Clifford" class="avatar">
         <div class="user-details">
@@ -78,7 +79,8 @@
         </div>
       </div>
       <p class="title">
-        Awesome teaching support from TAs who did the bootcamp themselves
+        Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and learning from
+        their experiences was easy.
       </p>
       <p class="content">
         “ The staff seem genuinely concerned about my progress which I find really refreshing. The program gave me the
