fix: change div to main for semantic structure in testimonials section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <div class="testimonials">
+  <main class="testimonials">
     <div class="card">
       <img src="./images/bg-pattern-quotation.svg" alt="" class="quotation-background">
       <div class="info">
@@ -111,8 +111,7 @@
         developer after receiving multiple offers. 100% recommend! ”
       </p>
     </div>
-  </div>
-
+  </main>
 </body>
 
 </html>
