--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <main class="testimonials">
-    <div class="card">
+    <section class="card">
       <img src="./images/bg-pattern-quotation.svg" alt="" class="quotation-background">
       <div class="info">
         <img src="./images/image-daniel.jpg" alt="Daniel Clifford" class="avatar">
@@ -37,8 +37,8 @@
         completing
         the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”
       </p>
-    </div>
-    <div class="card">
+    </section>
+    <section class="card">
       <div class="info">
         <img src="./images/image-jonathan.jpg" alt="Jonathan Walters" class="avatar">
         <div class="user-details">
@@ -53,8 +53,8 @@
         “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer for a big
         company. This was one of the best investments I’ve made in myself. ”
       </p>
-    </div>
-    <div class="card">
+    </section>
+    <section class="card">
       <div class="info">
         <img src="./images/image-jeanette.jpg" alt="Jeanette Harmon" class="avatar">
         <div class="user-details">
@@ -69,8 +69,8 @@
         “ Thank you for the wonderful experience! I now have a job I really enjoy, and
         make a good living while doing something I love. ”
       </p>
-    </div>
-    <div class="card">
+    </section>
+    <section class="card">
       <div class="info">
         <img src="./images/image-patrick.jpg" alt="Patrick Abrams" class="avatar">
         <div class="user-details">
@@ -88,8 +88,8 @@
         standard is above the rest. You will get the personal attention you need from an incredible community of smart
         and amazing people. ”
       </p>
-    </div>
-    <div class="card">
+    </section>
+    <section class="card">
       <div class="info">
         <img src="./images/image-kira.jpg" alt="Kira Whittle" class="avatar">
         <div class="user-details">
@@ -110,7 +110,7 @@
         during interviews as an example of my developent experience. It certainly helped me land a job as a full-stack
         developer after receiving multiple offers. 100% recommend! ”
       </p>
-    </div>
+    </section>
   </main>
 </body>
 
