--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="info">
         <img src="./images/image-daniel.jpg" alt="Daniel Clifford" class="avatar">
         <div class="user-details">
-          <h3 class="user-name">Daniel Clifford</h3>
+          <h1 class="user-name">Daniel Clifford</h1>
           <p class="user-title">Verified Graduate</p>
         </div>
       </div>
@@ -28,7 +28,7 @@
         joined.
         I honestly feel I got every penny’s worth.
       </p>
-      <p class="content">
+      <blockquote class="content">
         “ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a transition and have
         heard
         some people who had an amazing experience here. I signed up for the free intro course and found it incredibly
@@ -36,45 +36,45 @@
         I enrolled shortly thereafter. The next 12 weeks was the best - and most grueling - time of my life. Since
         completing
         the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”
-      </p>
+      </blockquote>
     </section>
     <section class="card">
       <div class="info">
         <img src="./images/image-jonathan.jpg" alt="Jonathan Walters" class="avatar">
         <div class="user-details">
-          <h3 class="user-name">Jonathan Walters</h3>
+          <h1 class="user-name">Jonathan Walters</h1>
           <p class="user-title">Verified Graduate</p>
         </div>
       </div>
       <p class="title">
         The team was very supportive and kept me motivated
       </p>
-      <p class="content">
+      <blockquote class="content">
         “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer for a big
         company. This was one of the best investments I’ve made in myself. ”
-      </p>
+      </blockquote>
     </section>
     <section class="card">
       <div class="info">
         <img src="./images/image-jeanette.jpg" alt="Jeanette Harmon" class="avatar">
         <div class="user-details">
-          <h3 class="user-name">Jeanette Harmon</h3>
+          <h1 class="user-name">Jeanette Harmon</h1>
           <p class="user-title">Verified Graduate</p>
         </div>
       </div>
       <p class="title">
         An overall wonderful and rewarding experience
       </p>
-      <p class="content">
+      <blockquote class="content">
         “ Thank you for the wonderful experience! I now have a job I really enjoy, and
         make a good living while doing something I love. ”
-      </p>
+      </blockquote>
     </section>
     <section class="card">
       <div class="info">
         <img src="./images/image-patrick.jpg" alt="Patrick Abrams" class="avatar">
         <div class="user-details">
-          <h3 class="user-name">Patrick Abrams</h3>
+          <h1 class="user-name">Patrick Abrams</h1>
           <p class="user-title">Verified Graduate</p>
         </div>
       </div>
@@ -82,25 +82,25 @@
         Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and learning from
         their experiences was easy.
       </p>
-      <p class="content">
+      <blockquote class="content">
         “ The staff seem genuinely concerned about my progress which I find really refreshing. The program gave me the
         confidence necessary to be able to go out in the world and present myself as a capable junior developer. The
         standard is above the rest. You will get the personal attention you need from an incredible community of smart
         and amazing people. ”
-      </p>
+      </blockquote>
     </section>
     <section class="card">
       <div class="info">
         <img src="./images/image-kira.jpg" alt="Kira Whittle" class="avatar">
         <div class="user-details">
-          <h3 class="user-name">Kira Whittle</h3>
+          <h1 class="user-name">Kira Whittle</h1>
           <p class="user-title">Verified Graduate</p>
         </div>
       </div>
       <p class="title">
         Such a life-changing experience. Highly recommended!
       </p>
-      <p class="content">
+      <blockquote class="content">
         “ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from professionals who
         can help me learn programming step by step. I was encouraged to enroll by a former student of theirs who can
         only
@@ -109,7 +109,7 @@
         took my learning to the next level in a way that no tutorial could ever have. In fact, I’ve often referred to it
         during interviews as an example of my developent experience. It certainly helped me land a job as a full-stack
         developer after receiving multiple offers. 100% recommend! ”
-      </p>
+      </blockquote>
     </section>
   </main>
 </body>
