--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <h2 class="title">
           Such a life-changing experience. Highly recommended!
         </h2>
-        <p>
+        <p class="content">
           “ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from professionals
           who
           can help me learn programming step by step. I was encouraged to enroll by a former student of theirs who can
@@ -123,7 +123,7 @@
           it
           during interviews as an example of my developent experience. It certainly helped me land a job as a full-stack
           developer after receiving multiple offers. 100% recommend! ”
-        </p class="content">
+        </p>
       </blockquote>
     </section>
   </main>
