--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
 
 <body>
   <main class="testimonials">
-    <section class="card">
-      <img src="./images/bg-pattern-quotation.svg" alt="" class="quotation-background">
+    <section class="card card-purple quotation-background">
+      <img src="./images/bg-pattern-quotation.svg" alt="Quotation Background image" class="quotation-background-img">
       <div class="info">
         <img src="./images/image-daniel.jpg" alt="Daniel Clifford" class="avatar">
         <div class="user-details">
-          <h1 class="user-name">Daniel Clifford</h1>
-          <p class="user-title">Verified Graduate</p>
+          <h1 class="user-name text-purple-light">Daniel Clifford</h1>
+          <p class="user-title ">Verified Graduate</p>
         </div>
       </div>
       <blockquote>
-        <h2 class="title">
+        <h2 class="title text-purple-light">
           I received a job offer mid-course, and the subjects I learned were current, if not more so, in the company I
           joined.
           I honestly feel I got every penny’s worth.
         </h2>
-        <p class="content">
+        <p class="content text-purple-light">
           “ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a transition and have
           heard
           some people who had an amazing experience here. I signed up for the free intro course and found it incredibly
@@ -40,58 +40,58 @@
         </p>
       </blockquote>
     </section>
-    <section class="card">
+    <section class="card card-grey-light ">
       <div class="info">
         <img src="./images/image-jonathan.jpg" alt="Jonathan Walters" class="avatar">
         <div class="user-details">
-          <h1 class="user-name">Jonathan Walters</h1>
+          <h1 class="user-name text-white">Jonathan Walters</h1>
           <p class="user-title">Verified Graduate</p>
         </div>
       </div>
       <blockquote>
-        <h2 class="title">
+        <h2 class="title text-white">
           The team was very supportive and kept me motivated
         </h2>
-        <p class="content">
+        <p class="content text-grey-lighter ">
           “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer for a big
           company. This was one of the best investments I’ve made in myself. ”
         </p>
       </blockquote>
     </section>
-    <section class="card">
+    <section class="card card-white">
       <div class="info">
         <img src="./images/image-jeanette.jpg" alt="Jeanette Harmon" class="avatar">
         <div class="user-details">
-          <h1 class="user-name">Jeanette Harmon</h1>
+          <h1 class="user-name .text-grey-darker">Jeanette Harmon</h1>
           <p class="user-title">Verified Graduate</p>
         </div>
       </div>
       <blockquote>
-        <h2 class="title">
+        <h2 class="title text-grey-darker">
           An overall wonderful and rewarding experience
         </h2>
-        <p class="content">
+        <p class="content text-grey-dark ">
           “ Thank you for the wonderful experience! I now have a job I really enjoy, and
           make a good living while doing something I love. ”
         </p>
       </blockquote>
     </section>
-    <section class="card">
+    <section class="card card-grey-dark ">
       <div class="info">
         <img src="./images/image-patrick.jpg" alt="Patrick Abrams" class="avatar">
         <div class="user-details">
-          <h1 class="user-name">Patrick Abrams</h1>
+          <h1 class="user-name text-grey-light">Patrick Abrams</h1>
           <p class="user-title">Verified Graduate</p>
         </div>
       </div>
 
       <blockquote>
-        <h2 class="title">
+        <h2 class="title text-grey-light">
           Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and learning
           from
           their experiences was easy.
         </h2>
-        <p class="content">
+        <p class="content text-grey-lighter ">
           “ The staff seem genuinely concerned about my progress which I find really refreshing. The program gave me the
           confidence necessary to be able to go out in the world and present myself as a capable junior developer. The
           standard is above the rest. You will get the personal attention you need from an incredible community of smart
@@ -99,7 +99,7 @@
         </p>
       </blockquote>
     </section>
-    <section class="card">
+    <section class="card card-white">
       <div class="info">
         <img src="./images/image-kira.jpg" alt="Kira Whittle" class="avatar">
         <div class="user-details">
@@ -111,7 +111,7 @@
         <h2 class="title">
           Such a life-changing experience. Highly recommended!
         </h2>
-        <p class="content">
+        <p class="content text-grey-dark ">
           “ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from professionals
           who
           can help me learn programming step by step. I was encouraged to enroll by a former student of theirs who can
